--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-app-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://roman-valov-1.github.io/react-app-social-network",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +44,5 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
