--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-app-1",
   "version": "0.1.0",
-  "homepage": "https://roman-valov-1.github.io/react-app-social-network",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
